--- a/rest-reveal/index.html
+++ b/rest-reveal/index.html
@@ -121,20 +121,37 @@ img {
 					</section>
 
 					<section>
-						Em ReST, métodos HTTP viram CRUD:
+						<p>
+							Em ReST, métodos HTTP viram CRUD:
+						</p>
 
-						<table>
-							<thead>
-								<tr><th>Operação</th><th>Método</th></tr>
-							</thead>
+						<ul>
+							<li>Create &#8658; POST</li>
+							<li>Retrieve &#8658; GET</li>
+							<li>Update &#8658; PUT</li>
+							<li>Delete &#8658; DELETE</li>
+							<li class='fragment'>Update &#8658; PATCH</li>
+						</ul>
+					</section>
+				</section>
 
-							<tbody>
-								<tr><td>Create</td><td>POST</td></tr>
-								<tr><td>Retrieve</td><td>GET</td></tr>
-								<tr><td>Update</td><td>PUT</td></tr>
-								<tr><td>Delete</td><td>DELETE</td></tr>
-							</tbody>
-						</table>
+				<section>
+					<section>
+						<h2>Recursos</h2>
+						<img src='../_images/jellybeans.jpg'></img>
+					</section>
+
+					<section>
+						<ul>
+							<li>Em ReST, as "tabelas" são chamadas "recursos".</li>
+							<li>Sempre substantivos no plural.</li>
+							<li>Duas URLs por recurso
+								<ul>
+									<li>Uma para o conjunto;</li>
+									<li>Uma para elementos específicos.</li>
+								</ul>
+							</li>
+						</ul>
 					</section>
 				</section>
 			</div>
