--- a/rest-reveal/index.html
+++ b/rest-reveal/index.html
@@ -69,7 +69,7 @@ img {
 
 					<section>
 						<p>
-							É uma "arquitetura de transmissão de dados sobre HTTP.
+							É uma "arquitetura" de transmissão de dados sobre HTTP.
 						</p>
 
 						<p>
@@ -271,7 +271,12 @@ img {
 					<section>
 						<ul>
 							<li>Reaproveita toda a estrutura HTTP existente.</li>
-							<li>HTTP praticamente padrão em todas as linguagens na caixa.</li>
+							<li>HTTP praticamente padrão em todas as linguagens "na caixa".
+								<ul>
+									<li>(E, se não tiver, o protocolo é simples o suficiente para uma
+									     implementação na hora.)
+								</ul>
+							</li>
 							<li>Dificilmente portas HTTP (80 e 443) são bloequeadas em proxies.</li>
 							<li>"Sintaxe" simples.</li>
 						</ul>
