gitsvn to reveal

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/poa.jpg")'></div>
 						PyPoa
 					</a></li>
+
 					<li><a href='rest.html'>
 						<div class='thumb' style='background-image:url("_images/Seascapeshd - 2.png")'></div>
 						ReST
+					</a></li>
+
+					<li><a href='gitsvn.html'>
+						<div class='thumb' style='background-image:url("_images/Sketch27014711.png")'></div>
+						GIT-SVN
 					</a></li>
 				</ul>
 			</div>
