added git flow presentation

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/Sketch27014711.png")'></div>
 						GIT-SVN
 					</a></li>
+
+					<li><a href='gitflow.html'>
+						<div class='thumb' style='background-image:url("_images/git-workflow-gitflow.png")'></div>
+						GIT Flow
+					</a></li>
 				</ul>
 			</div>
 		</div>
