added the date when pypoa happened

--- a/pypoa.html
+++ b/pypoa.html
@@ -49,6 +49,7 @@ section {
 			<div class="slides">
 				<section data-background='_images/poa.jpg'>
 					<h1>PyPoa 2014</h1>
+					<p>7 de Junho de 2014</p>
 				</section>
 
 				<section data-background='_images/lightcastle-django.png'>
