renamed the image, because it seems reveal cant load images with spaces

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ ul.inline-list li {
 					</a></li>
 
 					<li><a href='rest.html'>
-						<div class='thumb' style='background-image:url("_images/Seascapeshd - 2.png")'></div>
+						<div class='thumb' style='background-image:url("_images/Seascapeshd.png")'></div>
 						ReST
 					</a></li>
 
