--- a/rest.html
+++ b/rest.html
@@ -38,8 +38,14 @@
 img {
 	height: 400px;
 }
+
 .semi-opaque {
 	background-color: rgba(0, 0, 0, 0.7);
+}
+
+* {
+	hyphens: none !important;
+	-moz-hyphens: none !important;
 }
 		</style>
 	</head>
@@ -49,7 +55,7 @@ img {
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
+				<section data-background='_images/Seascapeshd.png' class='semi-opaque'>
 					<h1>ReST</h1>
 					<h4>Restructured State Transfer</h4>
 				</section>
