added some stuff that should probably happen in every presentation

--- a/base.html
+++ b/base.html
@@ -35,8 +35,15 @@
 		<![endif]-->
 
 		<style>
-		</style>
+.semi-opaque {
+	background-color: rgba(0, 0, 0, 0.7);
+}
 
+* {
+	hyphens: none !important;
+	-moz-hyphens: none !important;
+}
+		</style>
 	</head>
 
 	<body>
