added more how complex flask apps can get

--- a/flask.html
+++ b/flask.html
@@ -79,7 +79,7 @@ def index():
 						</code></pre></p>
 					</section>
 
-					<section data-transition='none'>
+					<section>
 						<p><pre><code data-trim>
 #!/usr/bin/env python
 # -*- encoding: utf-8 -*-
@@ -94,7 +94,7 @@ def index():
 						<p><small>... mais o header...</small></p>
 					</section>
 
-					<section data-transition='none'>
+					<section>
 						<p><pre><code data-trim>
 #!/usr/bin/env python
 # -*- encoding: utf-8 -*-
@@ -111,7 +111,7 @@ def index():
 						<p><small>... mais a documentação do módulo...</small></p>
 					</section>
 
-					<section data-transition='none'>
+					<section>
 						<p><pre><code data-trim>
 #!/usr/bin/env python
 # -*- encoding: utf-8 -*-
@@ -130,7 +130,7 @@ def index():
 						<p><small>... mais a documentação das funções...</small></p>
 					</section>
 
-					<section data-transition='none'>
+					<section>
 						<p><pre><code data-trim>
 #!/usr/bin/env python
 # -*- encoding: utf-8 -*-
@@ -151,7 +151,7 @@ def index():
 						<p><small>... mais retornar templates ao invés de texto puro...</small></p>
 					</section>
 
-					<section data-transition='none'>
+					<section>
 						<p><pre><code data-trim>
 #!/usr/bin/env python
 # -*- encoding: utf-8 -*-
@@ -176,6 +176,16 @@ def index():
 						</code></pre></p>
 
 						<p><small>... mais adicionar uma configuração...</small></p>
+					</section>
+
+					<section>
+						<p><small>... mais tratamento de erros...</small></p>
+
+						<p><small>... mais outras rotas...</small></p>
+
+						<p><small>... mais blueprints/applications...</small></p>
+
+						<p><small>... mais inicialização do ORM...</small></p>
 					</section>
 				</section>
 
