oopsies in the url

--- a/rest.html
+++ b/rest.html
@@ -190,7 +190,7 @@ img {
 
 					<p>Requisições sem um recurso definido utilizam um verbo e GET:</p>
 
-					<p><code>GET /covert/?source=BRL&amp;value=10&amp;target=AUD</code></p>
+					<p><code>GET /convert/?source=BRL&amp;value=10&amp;target=AUD</code></p>
 				</section>
 
 				<section>
