already added the flask presentation, even if it is not complete yet

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/git-workflow-gitflow.png")'></div>
 						GIT Flow
 					</a></li>
+
+					<li><a href='flask.html'>
+						<div class='thumb' style='background-image:url("_images/flask.png")'></div>
+						Flask
+					</a></li>
 				</ul>
 			</div>
 		</div>
