learnt a new git log trick

--- a/gitsvn.html
+++ b/gitsvn.html
@@ -136,7 +136,8 @@ Stage this hunk [y,n,q,a,d,/,e,?]?
 						<li>Igual ao <code>svn log</code>, mas não precisa de less (e nada de "broken pipe" ao fechar o log).</li>
 						<li>Cores!</li>
 						<li><code>git log --raw</code>: mostra os arquivos alterados dentro da revisão.</li>
-						<li><code>git log -u</code>: mostra as alterações dentra da revisão.</li>
+						<li><code>git log -p</code>: mostra as alterações dentro da revisão.</li>
+						<li><code>git log -p [arquivo]</code>: mostra a alteração no arquivo em cada revisão.</li>
 					</ul>
 				</section>
 
