now it is "clearing" properly

--- a/jointjs/testcanvas.html
+++ b/jointjs/testcanvas.html
@@ -15,6 +15,9 @@ var canvas = document.getElementById('example');
 var ctx = canvas.getContext('2d');
 
 // master
+ctx.fillStyle = '#ffffff';
+ctx.fillRect(10, 10, 50, 30);
+
 ctx.fillStyle = 'rgb(0, 0, 0)';
 ctx.strokeRect(10, 10, 50, 30);
 ctx.fillText('Master', 15, 25);
