--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<title>Presentations</title>
 
-			<link rel='stylesheet' href='http://cdn.jsdelivr.net/foundation/5.3.0/css/normalize.css'>
-			<link rel="stylesheet" href='http://cdn.jsdelivr.net/foundation/5.3.0/css/foundation.min.css'>
+			<link rel='stylesheet' href='_external/normalize.css'>
+			<link rel="stylesheet" href='_external/foundation.min.css'>
 
-			<script src="http://cdn.jsdelivr.net/foundation/5.3.0/js/vendor/modernizr.js"></script>
+			<script src="_external/modernizr.js"></script>
 
 			<style>
 nav.top-bar {
@@ -68,8 +68,8 @@ ul.inline-list li {
 			</div>
 		</div>
 
-		<script src="http://cdn.jsdelivr.net/foundation/5.3.0/js/vendor/jquery.js"></script>
-		<script src="http://cdn.jsdelivr.net/foundation/5.3.0/js/foundation.min.js"></script>
+		<script src="_external/jquery.js"></script>
+		<script src="_external/foundation.min.js"></script>
 
 		<script>$(document).foundation();</script>
 	</body>
