added info about reset and checkout

--- a/gitsvn.html
+++ b/gitsvn.html
@@ -114,6 +114,23 @@ Stage this hunk [y,n,q,a,d,/,e,?]?
 				</section>
 
 				<section>
+					<h3><code>git add</code> e <code>git reset</code></h3>
+
+					<p>Como mencioando anteriormente, <code>git add</code> adiciona as modificações no index.</p>
+
+					<p><code>git reset</code> remove do index. Só isso.</p>
+				</section>
+
+				<section>
+					<h3><code>git checkout</code></h3>
+
+					<p>Faz a mesma coisa que o SVN checkout -- recupera um arquivo do repositório.</p>
+
+					<p>Só é preciso lembrar que no GIT, o repositório é local. Portanto irá trazer de volta a última
+					versão que estiver no repositório.</p>
+				</section>
+
+				<section>
 					<h3>Cores!</h3>
 
 					<img src='_images/gitadd.png'>
