how do i run this?

--- a/flask.html
+++ b/flask.html
@@ -697,6 +697,30 @@ def list():
                         </code></pre></p>
                     </section>
                 </section>
+                
+                <section>
+                    <section>
+                        <h2>Executando</h2>
+                    </section>
+                    
+                    <section>
+                        <p>Flask vem com um servidor de desenvolvimento integrado.
+						Para utilizar:</p>
+
+						<p><pre><code data-trim>
+app.run()
+						</code></pre></p>
+                    </section>
+
+					<section>
+						<p>Ou ainda:</p>
+
+						<p><pre><code data-trim>
+if __name__ == '__main__':
+	app.run()
+						</code></pre></p>
+					</section>
+                </section>
 
                 <section>
                     <section>
